change directory of build on scripts for netlify

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "netlify": "^2.4.4"
   },
   "scripts": {
-    "build": "./market-orgs/src/index.js"
+    "build": "./market-org/src/index.js"
   }
 }
