--- a/market-org/package.json
+++ b/market-org/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
     "firebase": "^6.1.0",
+    "node": "^12.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
