--- a/market-org/package.json
+++ b/market-org/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-text-mask": "^5.4.3",
     "stripe": "^7.1.0",
     "styled-components": "^4.3.1"
   },
